--- a/package.json
+++ b/package.json
@@ -10,12 +10,23 @@
     "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.11.1",
     "expo": "^54.0.1",
+    "expo-camera": "~17.0.9",
+    "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
+    "expo-file-system": "~19.0.19",
+    "expo-linking": "~8.0.9",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.0",
+    "expo-sharing": "~14.0.7",
+    "expo-sqlite": "~16.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0"
   },
   "private": true
